Se creó el ServicioLeccion con su implementacion y test, se implementaron más test de ControladorEjercicioTest tanto en la presentación como integración. Se modificó el Ejercicio y se agregó una relacion ManyToOne con Leccion.